# trknxor

./: .replit  Discovery.md  README.md  Spacefile  main.py  pyproject.toml  replit.nix  xor.py
templates/: error.html  home.html  result.html
